--- a/install.txt
+++ b/install.txt
@@ -10,4 +10,4 @@ directory,among_us
 
 //This tells the program what balloon your ghost will be using. Replace "z_simple" and point it at your balloon directory if you've made one, or use a default balloon directory.
 
-balloon.directory,z_undertale
+balloon.directory,among_us
